    fork+exec.
  * dh_builddeb: Use -z6 compression for udebs (up from -z1).
    Thanks to Adrian Bunk for the suggestion and Aurelien Jarno
    for confirming it would be fine for d-i.  (Closes: #870201)
  * dh_fixperms: Set the permissions of /usr/lib/nodejs/*/{cli,bin}.js
    to 0755.  Thanks to Pirate Praveen for the report.
    (Closes: #840913)

  [ Felipe Sateler ]
  * dh_systemd_enable: Refactor and add support for timer units.
    (Closes: #841746)

 -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000

debhelper (10.8) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib: Introduce a qx_cmd sub to behave like a mix of qx
    and doit (i.e. avoid the shell while capturing stdout).
  * dh_makeshlibs: Avoid forking a shell when calling objdump in
    compat 11.
  * dh_shlibdeps: Avoid forking a shell when calling file.
  * dh_shlibdeps: Avoid passing files with "newline" to
    subprocesses.
  * dh_installdocs: Ignore missing files in compat 11 for packages
    that are not processed (e.g. arch:all packages during a -B build).
    Thanks to Jens Reyer for reporting the issue.  (Closes: #870892)
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * dh_compress: Avoid forking a shell for a find command.
  * dh_gconf: Ditto.
  * dh_installgsettings: Ditto.
  * dh_perl: Avoid forking a shell for a dpkg call.
  * dh_gencontrol: Set the priority of all dbgsym packages to
    optional to be compliant with Standards-Version 4.0.1.
    Thanks to Mattia Rizzolo for the report.  (Closes: #870905)
  * dh_installdocs: Accept "nodoc" via DEB_BUILD_OPTIONS as well.
    Thanks to Sébastien Villemot for the suggestion.
    (Closes: #866619)
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * dh_installwm: Ditto.
  * debhelper.pod: Tweak text for some compat 11 changes.
  * dh_installdeb: Stop emitting versioned Pre-Depends on dpkg for