@@ -166,6 +166,8 @@ doit([$options, ]@command)
 	The following key-value pairs can be used:
 	  * stdout => A file name.  The child process will have its STDOUT redirected
 	    to that file.  [debhelper (>= 10.7)]
+	  * chdir => A directory.  The child process will do a chdir into that
+	    directory before executing the command.  [debhelper (>= 10.8)]
 
 	This will *not* invoke a shell, so meta characters will not have any special
 	meaning.  Use complex_doit for that.
