@@ -25,6 +25,8 @@ debhelper (10.9) UNRELEASED; urgency=medium
   * dh_fixperms: Set the permissions of /usr/lib/nodejs/*/{cli,bin}.js
     to 0755.  Thanks to Pirate Praveen for the report.
     (Closes: #840913)
+  * Dh_lib.pm: Expand *_doit and doit to also support a chdir in the
+    child process.
 
   [ Felipe Sateler ]
   * dh_systemd_enable: Refactor and add support for timer units.
